--- a/css/invitados.css
+++ b/css/invitados.css
@@ -11,8 +11,7 @@
     padding: 0;
     width: 200px;
     position: fixed;
-    height: 100%;
-    overflow: auto;
+    max-height: 90vh;
     align-self: flex-start;
     background-color: #f1f1f1;
   }
@@ -33,8 +32,6 @@
   }
   .sidebar {
     width: 100%;
-    overflow: auto;
-    background-color: #f1f1f1;
     display: flex;
   }
 }
@@ -145,6 +142,7 @@ div.content {
   border-radius: 50%;
   width: 6em;
   margin-right: 2em;
+  box-shadow: 0px 0px 10px 0px #b11200;
 }
 
 iframe {
@@ -192,4 +190,9 @@ table td {
 article {
   margin-bottom: 5em;
   align-self: center;
+}
+
+.sidebar {
+  overflow: auto;
+  background-color: #f1f1f1;
 }
