--- a/css/invitados.css
+++ b/css/invitados.css
@@ -20,7 +20,7 @@
   }
 
   iframe {
-    width: 560px;
+    width: 500px;
     height: 315px;
     border: 0;
   }
@@ -42,8 +42,8 @@
   }
 
   iframe {
-    width: 255px;
-    height: 157.5px;
+    width: 20em;
+    height: 15em;
     border: 0;
   }
 }
