--- a/css/invitados.css
+++ b/css/invitados.css
@@ -34,7 +34,8 @@
   .sidebar a {
     text-align: center;
     float: none;
-    display: block ruby;
+    align-items: center;
+    display: flex;
   }
   .sidebar {
     width: 100%;
