--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,10 @@
     font-size: 15px;
   }
 
+  .banner-text {
+    font-size: 30px;
+    font-weight: bold;
+  }
   .banner {
     padding: 2em;
   }
@@ -180,6 +184,10 @@
 }
 
 @media only screen and (max-width: 767px) {
+  .banner-text {
+    font-size: 20px;
+    font-weight: bold;
+  }
   .artists {
     flex-direction: column;
     margin-top: 3em;
