--- a/css/horarios.css
+++ b/css/horarios.css
@@ -9,18 +9,6 @@
     padding-top: 0.5%;
   }
 
-  .table-body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-height: 100vh;
-    padding: 4rem 0;
-    background-color: white;
-    width: 90%;
-    border-radius: 20px;
-  }
-
   table {
     width: 100%;
     max-width: 60em;
@@ -72,17 +60,6 @@
     font-size: 18px;
     background-color: #333;
     color: white;
-  }
-
-  .tabContainer .tabPanel {
-    height: 85%;
-    color: white;
-    text-align: center;
-    padding-top: 105px;
-    box-sizing: border-box;
-    font-size: 22px;
-    padding-bottom: 4em;
-    justify-content: center;
   }
 }
 
@@ -200,4 +177,27 @@
 
 .type-6 {
   background-color: #497583;
+}
+
+.tabContainer .tabPanel {
+  height: 85%;
+  color: white;
+  text-align: center;
+  padding-top: 3em;
+  box-sizing: border-box;
+  font-size: 22px;
+  padding-bottom: 4em;
+  justify-content: center;
+}
+
+.table-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  padding: 3rem;
+  background-color: white;
+  width: 90%;
+  border-radius: 20px;
 }
