--- a/css/horarios.css
+++ b/css/horarios.css
@@ -196,7 +196,7 @@
   justify-content: center;
   flex-direction: column;
   min-height: 100vh;
-  padding: 3rem 0;
+  padding: 3rem 1rem;
   background-color: white;
   width: 90%;
   border-radius: 20px;
