--- a/css/horarios.css
+++ b/css/horarios.css
@@ -61,6 +61,10 @@
     background-color: #333;
     color: white;
   }
+
+  .table-body {
+    padding: 3rem;
+  }
 }
 
 @media only screen and (max-width: 767px) {
@@ -140,6 +144,10 @@
     font-size: 22px;
     justify-content: center;
   }
+
+  .table-body {
+    padding: 3rem 0;
+  }
 }
 
 #button1 {
@@ -196,7 +204,6 @@
   justify-content: center;
   flex-direction: column;
   min-height: 100vh;
-  padding: 3rem 1rem;
   background-color: white;
   width: 90%;
   border-radius: 20px;
