--- a/css/localizacion.css
+++ b/css/localizacion.css
@@ -1,15 +1,4 @@
 @media only screen and (min-width: 768px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    padding-top: 0.5%;
-    font-family: "Roboto";
-  }
-
   .content {
     margin: 2%;
     align-self: center;
@@ -31,17 +20,6 @@
 }
 
 @media only screen and (max-width: 767px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    padding-top: 0.5%;
-    font-family: "Roboto";
-  }
-
   .content {
     margin: 2%;
     align-self: center;
@@ -60,4 +38,27 @@
     height: 225px;
     border: 0;
   }
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.5%;
+  padding-bottom: 3em;
+  font-family: "Roboto";
+}
+
+article {
+  background-color: white;
+  border-radius: 20px;
+  padding-top: 0.01%;
+  padding-bottom: 0.5%;
+  padding-left: 2%;
+  padding-right: 2%;
+
+  margin: 2%;
 }
