--- a/css/bases.css
+++ b/css/bases.css
@@ -10,19 +10,13 @@
   }
 
   .content {
-    margin: 2%;
+    padding-top: 5em;
+    padding-bottom: 2em;
     align-self: center;
     width: 85%;
     font-size: 16px;
     font-weight: 400;
     line-height: 1.8;
-  }
-
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-color: white;
-    overflow: hidden;
   }
 }
 
@@ -44,13 +38,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 1.8;
-  }
-
-  .panel {
-    padding: 0 18px;
-    display: none;
-    background-color: white;
-    overflow: hidden;
   }
 }
 
@@ -90,4 +77,16 @@
   outline: none;
   font-size: 15px;
   transition: 0.4s;
+}
+
+.panel {
+  padding: 0 18px;
+  display: none;
+  background-color: white;
+  overflow: hidden;
+  margin-bottom: 0.5em;
+}
+
+article {
+  margin: 2%;
 }
