--- a/css/layout.css
+++ b/css/layout.css
@@ -179,15 +179,6 @@ div.breadcrumb ul li + li::before {
     z-index: 1;
     padding-left: 14px;
   }
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-    clear: both;
-    padding-top: 0.5%;
-    background-color: #f1f1f1;
-  }
 
   footer {
     position: relative;
@@ -407,15 +398,6 @@ div.breadcrumb ul li + li::before {
   .dropdown-content a:hover {
     background-color: #ddd;
   }
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-    clear: both;
-    padding-top: 0.5%;
-    background-color: #f1f1f1;
-  }
 
   .navbar {
     background-color: #333;
@@ -583,4 +565,24 @@ div.breadcrumb ul li + li::before {
   bottom: 2%;
   right: 1%;
   width: 45%;
+}
+
+.style {
+  background-color: white;
+  border-radius: 20px;
+  padding-top: 0.01%;
+  padding-bottom: 0.5%;
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  display: flex;
+  clear: both;
+  padding-top: 0.5%;
+  background-color: #f1f1f1;
+  padding-bottom: 3em;
 }
