--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 .news {
   position: relative;
   float: left;
-  border-left: 4px solid #497583;
+  border-left: 4px solid #b11200;
   height: 100%;
   background-color: white;
 }
