--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -26,7 +26,7 @@
     resize: vertical;
   }
 
-  select option {
+  select option:hover {
     background-color: #004680;
   }
 
@@ -85,7 +85,7 @@
     resize: vertical;
   }
 
-  select option {
+  select option:hover {
     background-color: #004680;
   }
 
