--- a/css/layout.css
+++ b/css/layout.css
@@ -247,7 +247,7 @@ div.breadcrumb ul li + li::before {
     font-size: 30px;
     font-weight: bold;
     line-height: 25px;
-    width: 60%;
+    width: max-content;
   }
 
   .titleBox {
