--- a/css/bases.css
+++ b/css/bases.css
@@ -1,43 +1,13 @@
 @media only screen and (min-width: 768px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    padding-top: 0.5%;
-  }
-
   .content {
     padding-top: 5em;
     padding-bottom: 2em;
-    align-self: center;
-    width: 85%;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.8;
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    clear: both;
-    display: flex;
-    flex-direction: column;
-    padding-top: 0.5%;
-  }
-
   .content {
     margin: 2%;
-    align-self: center;
-    width: 85%;
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.8;
   }
 }
 
@@ -91,4 +61,22 @@ article {
   margin-left: 2%;
   margin-right: 2%;
   margin-bottom: 4em;
+}
+
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  clear: both;
+  display: flex;
+  flex-direction: column;
+  padding-top: 0.5%;
+}
+
+.content {
+  align-self: center;
+  width: 85%;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.8;
 }
