--- a/css/horarios.css
+++ b/css/horarios.css
@@ -1,153 +1,100 @@
 @media only screen and (min-width: 768px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 0.5%;
-  }
-
-  table {
-    width: 100%;
-    max-width: 60em;
-  }
-
   table th,
   table td {
     padding: 0.5rem 1rem;
-  }
-  table th {
-    font-weight: normal;
-    border-top: dotted #333333;
-    color: black;
-  }
-  table td {
-    font-size: 0.8rem;
-    font-weight: bold;
-    line-height: 1.4;
-    border-radius: 0.2rem;
-    transition: opacity 0.3s ease;
-    color: #ffffff;
-  }
-  table td > span {
-    font-size: 0.8em;
-    font-weight: normal;
-    display: block;
-    width: 100%;
-  }
-
-  .tabContainer {
-    width: 100%;
-    height: 100%;
-  }
-
-  .tabContainer .buttonContainer {
-    display: flex;
-    justify-content: center;
-    height: 15%;
-  }
-
-  .tabContainer .buttonContainer button {
-    width: 25%;
-    height: 100%;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 18px;
-    background-color: #333;
-    color: white;
   }
 
   .table-body {
     padding: 3rem;
   }
+
+  .tabContainer .tabPanel {
+    padding-top: 3em;
+    padding-bottom: 3em;
+  }
 }
 
 @media only screen and (max-width: 767px) {
-  .main {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    padding-top: 0.5%;
-  }
-
   .table-body {
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    min-height: 100vh;
     padding: 4rem 0;
-    background-color: white;
-    width: 95%;
-    border-radius: 20px;
+    /*width: 95%;*/
   }
 
-  table {
-    width: 100%;
-    max-width: 60em;
-  }
-
-  table th {
-    font-weight: normal;
-    border-top: dotted #333333;
-    color: black;
-  }
-
-  table td {
-    font-size: 0.8rem;
-    font-weight: bold;
-    line-height: 1.4;
-    border-radius: 0.2rem;
-    transition: opacity 0.3s ease;
-    color: #ffffff;
-  }
-  table td > span {
-    font-size: 0.8em;
-    font-weight: normal;
-    display: block;
-    width: 100%;
-  }
-  .tabContainer {
-    width: 100%;
-    height: 100%;
-  }
-  .tabContainer .buttonContainer {
-    display: flex;
-    justify-content: center;
-    height: 15%;
-  }
-  .tabContainer .buttonContainer button {
-    width: 25%;
-    height: 100%;
-    float: left;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 10px;
-    font-size: 18px;
-    background-color: #333;
-    color: white;
-  }
-
-  .tabContainer .tabPanel {
-    height: 85%;
-    color: white;
-    text-align: center;
-    box-sizing: border-box;
-    font-size: 22px;
-    justify-content: center;
-  }
-
+  /*
   .table-body {
     padding: 3rem 0;
   }
+  */
+}
+
+.tabContainer .tabPanel {
+  height: 85%;
+  color: white;
+  text-align: center;
+  box-sizing: border-box;
+  font-size: 22px;
+  justify-content: center;
+}
+
+.table-body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  min-height: 100vh;
+  background-color: white;
+  width: 90%;
+  border-radius: 20px;
+}
+
+table {
+  width: 100%;
+  max-width: 60em;
+}
+
+table td {
+  font-size: 0.8rem;
+  font-weight: bold;
+  line-height: 1.4;
+  border-radius: 0.2rem;
+  transition: opacity 0.3s ease;
+  color: #ffffff;
+}
+table td > span {
+  font-size: 0.8em;
+  font-weight: normal;
+  display: block;
+  width: 100%;
+}
+
+.tabContainer {
+  width: 100%;
+  height: 100%;
+}
+
+.tabContainer .buttonContainer button {
+  width: 25%;
+  height: 100%;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 10px;
+  font-size: 18px;
+  background-color: #333;
+  color: white;
+}
+
+.tabContainer .buttonContainer {
+  display: flex;
+  justify-content: center;
+  height: 15%;
+}
+
+table th {
+  font-weight: normal;
+  border-top: dotted #333333;
+  color: black;
 }
 
 #button1 {
@@ -187,24 +134,12 @@
   background-color: #497583;
 }
 
-.tabContainer .tabPanel {
-  height: 85%;
-  color: white;
-  text-align: center;
-  padding-top: 3em;
-  box-sizing: border-box;
-  font-size: 22px;
-  padding-bottom: 4em;
-  justify-content: center;
-}
-
-.table-body {
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
   display: flex;
-  align-items: center;
   justify-content: center;
   flex-direction: column;
-  min-height: 100vh;
-  background-color: white;
-  width: 90%;
-  border-radius: 20px;
+  padding-top: 0.5%;
 }
