--- a/css/horarios.css
+++ b/css/horarios.css
@@ -3,29 +3,23 @@
   table td {
     padding: 0.5rem 1rem;
   }
-
-  .table-body {
-    padding: 3rem;
-  }
-  /*
-  .tabContainer .tabPanel {
-    padding-top: 3em;
-    padding-bottom: 3em;
-  }
-  */
 }
 
 @media only screen and (max-width: 767px) {
-  .table-body {
+  /*.table-body {
     padding: 4rem 0;
     width: 95%;
   }
-
+*/
   /*
   .table-body {
     padding: 3rem 0;
   }
   */
+}
+
+.table-body {
+  padding: 3rem;
 }
 
 .tabContainer .tabPanel {
