--- a/css/actividades.css
+++ b/css/actividades.css
@@ -1,23 +1,17 @@
+/*WEB*/
 @media only screen and (min-width: 768px) {
   .miniature {
-    float: left;
     width: 20em;
-    margin: 3%;
-    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
   }
 }
 
+/*MOVIL*/
 @media only screen and (max-width: 767px) {
   .miniature {
-    float: left;
     max-width: 50%;
     height: 20em;
     object-fit: cover;
-    margin: 3%;
     align-self: center;
-    box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 5px;
   }
 
   .miniature1 {
@@ -34,6 +28,7 @@
   }
 }
 
+/*GENERAL*/
 .activity {
   margin: 2%;
   background-color: white;
@@ -90,4 +85,11 @@
   line-height: 2px;
   font-weight: lighter;
   color: #b11200;
+}
+
+.miniature {
+  float: left;
+  margin: 3%;
+  box-shadow: 3px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
 }
