--- a/css/bases.css
+++ b/css/bases.css
@@ -1,3 +1,4 @@
+/*WEB*/
 @media only screen and (min-width: 768px) {
   .content {
     padding-top: 5em;
@@ -5,12 +6,14 @@
   }
 }
 
+/*MOVIL*/
 @media only screen and (max-width: 767px) {
   .content {
     margin: 2%;
   }
 }
 
+/*GENERAL*/
 .main article h1 {
   border-bottom: 3px solid #b11200;
 }
