--- a/css/horarios.css
+++ b/css/horarios.css
@@ -1,3 +1,4 @@
+/*WEB*/
 @media only screen and (min-width: 768px) {
   table th,
   table td {
@@ -13,6 +14,7 @@
   }
 }
 
+/*MOVIL*/
 @media only screen and (max-width: 767px) {
   .table-body {
     padding: 3rem 0;
@@ -23,6 +25,7 @@
   }
 }
 
+/*GENERAL*/
 .tabContainer .tabPanel {
   padding-top: 3em;
   padding-bottom: 3em;
