--- a/css/layout.css
+++ b/css/layout.css
@@ -1,3 +1,316 @@
+/*MÓVIL*/
+@media only screen and (max-width: 767px) {
+  .dropdown .dropbtn {
+    text-align: left;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+
+  .dropdown-content {
+    padding-left: 14px;
+  }
+
+  #copyright {
+    font-size: 0.8em;
+    text-align: right;
+  }
+
+  #title span {
+    font-size: 50px;
+  }
+
+  #myBtn {
+    bottom: 180px;
+  }
+  /*SIDEBAR Y NAVBAR*/
+  .container {
+    justify-content: space-between;
+  }
+
+  .container .logo {
+    flex: 1;
+  }
+
+  .container .navbar {
+    flex: 0;
+  }
+
+  .container .navbar ul {
+    flex-wrap: nowrap;
+    position: fixed;
+    left: 100%;
+    flex-direction: column;
+    background: #ffffff;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    transition: left 0.3s;
+  }
+
+  .container .navbar ul li a {
+    padding: 10px;
+    font-size: 16px;
+    height: auto;
+    line-height: normal;
+    width: 100%;
+  }
+
+  .container .navbar ul .close {
+    display: block;
+  }
+
+  .container .navbar .icon-bar {
+    display: flex;
+  }
+
+  .container .navbar ._Menus-show {
+    left: 0;
+    background-color: #333;
+  }
+
+  .dropdown,
+  .dropdown .dropbtn {
+    width: 100%;
+  }
+
+  .dropdown-content {
+    overflow: hidden;
+    width: 100%;
+  }
+  /*FIN SIDEBAR Y NAVBAR*/
+  #picture-article {
+    width: 20em;
+    height: 15em;
+  }
+
+  .main {
+    flex-direction: column-reverse;
+  }
+  .titlebox {
+    height: 9em;
+    padding-top: 3.5em;
+  }
+}
+
+/*WEB*/
+@media only screen and (min-width: 768px) {
+  .titleBox {
+    height: 16em;
+    padding-top: 6.5em;
+  }
+  #picture-article {
+    width: 500px;
+  }
+
+  .dropdown {
+    float: left;
+    height: 100%;
+  }
+
+  .dropdown .dropbtn {
+    outline: none;
+    padding: 14px 16px;
+    margin: 0;
+    height: 100%;
+  }
+
+  /*
+  .dropdown .dropbtn {
+    text-align: left;
+    font-size: 16px;
+    padding: 14px 16px;
+    color: white;
+    border: none;
+    background-color: inherit;
+  }
+  */
+
+  .dropdown-content {
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+
+  .navbar {
+    background-color: #333;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex: 1;
+    padding: 0 10px;
+    justify-content: center;
+  }
+
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+  .header {
+    height: 60px;
+    background-color: #333333;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+  }
+
+  .header .logo {
+    max-width: 250px;
+    padding: 0 10px;
+  }
+
+  .header .logo a {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    height: 60px;
+  }
+
+  .header .logo a img {
+    max-width: 100%;
+    max-height: 60px;
+  }
+
+  #copyright {
+    font-size: 0.8em;
+  }
+
+  #title span {
+    font-size: 100px;
+  }
+
+  #myBtn {
+    bottom: 130px;
+  }
+}
+
+/*GENERAL*/
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown {
+  float: left;
+  height: 100%;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  color: white;
+  border: none;
+  background-color: inherit;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #333;
+  min-width: 160px;
+  z-index: 1;
+}
+
+footer {
+  position: relative;
+  background-color: #333;
+  color: #ffffff;
+  width: 100%;
+  left: 0;
+  bottom: 0;
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+}
+
+.contactos::after {
+  position: relative;
+  width: 100%;
+  content: "";
+  display: flex;
+}
+
+.titles {
+  border-bottom: 3px solid #b11200;
+  margin-top: 5%;
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 25px;
+  width: max-content;
+}
+
+.titleBox {
+  width: 100%;
+  float: left;
+  background-image: url("../images/fondos/header.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position-x: 10em;
+}
+
+.breadcrumb {
+  position: relative;
+  left: 0%;
+  width: 100%;
+  background-color: #497583;
+  color: #ffffff;
+}
+
+#myBtn {
+  position: fixed;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: rgb(255, 0, 0, 0.35);
+  color: white;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+}
+
+#title span {
+  border-bottom: 3px solid #b11200;
+  margin-top: 50%;
+  font-weight: bold;
+  line-height: 25px;
+  margin-left: 1em;
+}
+.iconos {
+  width: 1.3em;
+  height: 1.3em;
+}
+
+.colabout {
+  float: left;
+  height: 50%;
+  margin-right: 5%;
+  width: 11em;
+}
+
+.footer {
+  width: 95%;
+  align-self: center;
+  height: 85%;
+}
+
+footer div a {
+  text-decoration: none;
+  color: white;
+  line-height: 2em;
+}
+
 *,
 *::before,
 *::after {
@@ -137,10 +450,6 @@ div.breadcrumb ul li + li::before {
   height: 2px;
 }
 
-.titleBox {
-  background-color: white;
-}
-
 .iframe {
   align-self: center;
   display: flex;
@@ -150,419 +459,6 @@ div.breadcrumb ul li + li::before {
   padding-bottom: 2em;
 }
 
-/*MÓVIL*/
-
-@media only screen and (max-width: 767px) {
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-  .dropdown {
-    float: left;
-    height: 100%;
-  }
-
-  .dropdown .dropbtn {
-    text-align: left;
-    font-size: 16px;
-    color: white;
-    border: none;
-    background-color: inherit;
-    padding-top: 16px;
-    padding-bottom: 16px;
-  }
-
-  .dropdown-content {
-    display: none;
-    background-color: #333;
-    min-width: 160px;
-    z-index: 1;
-    padding-left: 14px;
-  }
-
-  footer {
-    position: relative;
-    background-color: #333;
-    color: #ffffff;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    flex-direction: column;
-    display: flex;
-    justify-content: center;
-  }
-
-  footer div a {
-    text-decoration: none;
-    color: white;
-    line-height: 2em;
-  }
-  .footer {
-    width: 95%;
-    align-self: center;
-    height: 85%;
-  }
-
-  .colabout {
-    float: left;
-    height: 50%;
-    margin-right: 5%;
-    width: 11em;
-  }
-
-  .contactos::after {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-  }
-
-  .iconos {
-    width: 1.3em;
-    height: 1.3em;
-  }
-
-  #copyright {
-    font-size: 0.8em;
-    text-align: right;
-  }
-
-  /* .flex {
-    display: flex;
-    align-items: center;
-  } */
-
-  #title span {
-    border-bottom: 3px solid #b11200;
-    margin-top: 50%;
-    font-size: 50px;
-    font-weight: bold;
-    line-height: 25px;
-    margin-left: 1em;
-  }
-
-  .titles {
-    border-bottom: 3px solid #b11200;
-    margin-top: 5%;
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 25px;
-    width: max-content;
-  }
-
-  .titleBox {
-    width: 100%;
-    float: left;
-    background-image: url("../images/fondos/header.png");
-    height: 9em;
-    padding-top: 3.5em;
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-
-  .breadcrumb {
-    position: relative;
-    left: 0%;
-    width: 100%;
-    /*height: 10%;*/
-    background-color: #497583;
-    color: #ffffff;
-  }
-
-  #myBtn {
-    position: fixed;
-    bottom: 180px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: rgb(255, 0, 0, 0.35);
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-  /*SIDEBAR Y NAVBAR*/
-  .container {
-    justify-content: space-between;
-  }
-
-  .container .logo {
-    flex: 1;
-  }
-
-  .container .navbar {
-    flex: 0;
-  }
-
-  .container .navbar ul {
-    flex-wrap: nowrap;
-    position: fixed;
-    left: 100%;
-    flex-direction: column;
-    background: #ffffff;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    transition: left 0.3s;
-  }
-
-  .container .navbar ul li a {
-    padding: 10px;
-    font-size: 16px;
-    height: auto;
-    line-height: normal;
-    width: 100%;
-  }
-
-  .container .navbar ul .close {
-    display: block;
-  }
-
-  .container .navbar .icon-bar {
-    display: flex;
-  }
-
-  .container .navbar ._Menus-show {
-    left: 0;
-    background-color: #333;
-  }
-
-  .dropdown,
-  .dropdown .dropbtn {
-    width: 100%;
-  }
-
-  .dropdown-content {
-    overflow: hidden;
-    width: 100%;
-  }
-  /*FIN SIDEBAR Y NAVBAR*/
-  #picture-article {
-    width: 20em;
-    height: 15em;
-  }
-
-  .main {
-    flex-direction: column-reverse;
-  }
-}
-
-/*RESTO*/
-@media only screen and (min-width: 768px) {
-  #picture-article {
-    width: 500px;
-  }
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
-
-  .dropdown {
-    float: left;
-    height: 100%;
-  }
-
-  .dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    margin: 0;
-    height: 100%;
-  }
-
-  .dropdown .dropbtn {
-    text-align: left;
-    font-size: 16px;
-    padding: 14px 16px;
-    color: white;
-    border: none;
-    background-color: inherit;
-  }
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #333;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-  }
-
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-
-  .navbar {
-    background-color: #333;
-    height: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    flex: 1;
-    padding: 0 10px;
-    justify-content: center;
-  }
-
-  .navbar a {
-    float: left;
-    font-size: 16px;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .header {
-    height: 60px;
-    background-color: #333333;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    box-shadow: 0px 5px 8px 2px rgba(0, 0, 0, 0.2);
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-  }
-
-  .header .logo {
-    max-width: 250px;
-    padding: 0 10px;
-  }
-
-  .header .logo a {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    height: 60px;
-  }
-
-  .header .logo a img {
-    max-width: 100%;
-    max-height: 60px;
-  }
-
-  footer {
-    position: relative;
-    background-color: #333;
-    color: #ffffff;
-    width: 100%;
-    left: 0;
-    bottom: 0;
-    flex-direction: column;
-    display: flex;
-    justify-content: center;
-  }
-
-  footer div a {
-    text-decoration: none;
-    color: white;
-    line-height: 2em;
-  }
-  .footer {
-    width: 95%;
-    align-self: center;
-    height: 85%;
-  }
-
-  .colabout {
-    float: left;
-    height: 50%;
-    margin-right: 5%;
-    width: 11em;
-  }
-
-  .contactos::after {
-    position: relative;
-    width: 100%;
-    content: "";
-    display: flex;
-  }
-
-  .iconos {
-    width: 1.3em;
-    height: 1.3em;
-  }
-
-  #copyright {
-    font-size: 0.8em;
-  }
-
-  #title span {
-    border-bottom: 3px solid #b11200;
-    margin-top: 50%;
-    font-size: 100px;
-    font-weight: bold;
-    line-height: 25px;
-    margin-left: 1em;
-  }
-
-  .titles {
-    border-bottom: 3px solid #b11200;
-    margin-top: 5%;
-    font-size: 30px;
-    font-weight: bold;
-    line-height: 25px;
-    width: 60%;
-  }
-
-  .titleBox {
-    width: 100%;
-    float: left;
-    background-image: url("../images/fondos/header.png");
-    height: 16em;
-    padding-top: 6.5em;
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-x: 10em;
-    background-color: white;
-  }
-
-  .breadcrumb {
-    position: relative;
-    left: 0%;
-    width: 100%;
-    /*height: 10%;*/
-    background-color: #497583;
-    color: #ffffff;
-  }
-
-  #myBtn {
-    position: fixed;
-    bottom: 130px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: rgb(255, 0, 0, 0.35);
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 4px;
-  }
-}
-
 .contacto {
   display: grid;
   justify-items: end;
@@ -570,6 +466,15 @@ div.breadcrumb ul li + li::before {
   bottom: 2%;
   right: 1%;
   width: 45%;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
 }
 
 .style {
