--- a/css/bases.css
+++ b/css/bases.css
@@ -59,6 +59,8 @@ article {
   display: flex;
   flex-direction: column;
   padding-top: 0.5%;
+  background-color: #f1f1f1;
+  padding-bottom: 3em;
 }
 
 .content {
@@ -72,7 +74,7 @@ article {
 /*WEB*/
 @media only screen and (min-width: 768px) {
   .content {
-    padding-top: 5em;
+    margin-top: 5em;
     padding-bottom: 2em;
   }
 }
