--- a/css/index.css
+++ b/css/index.css
@@ -168,6 +168,17 @@
   border-bottom: 2px solid;
 }
 
+.main {
+  position: relative;
+  width: 100%;
+  content: "";
+  display: flex;
+  clear: both;
+  padding-top: 2em;
+  padding-bottom: 3em;
+  background-color: #f1f1f1;
+}
+
 /*WEB*/
 @media only screen and (min-width: 768px) {
   .news {
