--- a/css/inscripcion.css
+++ b/css/inscripcion.css
@@ -15,6 +15,8 @@
   align-items: center;
   flex-direction: column;
   padding-top: 0.5%;
+  background-color: #f1f1f1;
+  padding-bottom: 3em;
 }
 
 .col {
