--- a/css/actividades.css
+++ b/css/actividades.css
@@ -49,7 +49,6 @@
   font-size: 30px;
   font-weight: bold;
   line-height: 25px;
-  width: max-content;
 }
 
 .rol {
@@ -70,11 +69,15 @@
   .miniature {
     width: 20em;
   }
+
+  .titlesActivity {
+    width: max-content;
+  }
 }
 
 /*MOVIL*/
 @media only screen and (max-width: 767px) {
-  .titlesRight {
+  .titlesActivity {
     width: min-content;
   }
 
